Fixed template padding too tall, causing occasional scrolling issue.

--- a/src/ui/src/styles/mixins/_template-input.sass
+++ b/src/ui/src/styles/mixins/_template-input.sass
@@ -78,7 +78,7 @@
 						background-color: var(--blue3)
 				.template-inner-padding
 					width: 2px
-					height: 100%
+					height: auto
 					display: inline-block
 					position: static
 					padding: 0
